# sdr-gateway

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  Makefile  README.md  RELEASE_CHECKLIST.md  TROUBLESHOOTING.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  secret-scan.yml
app/: __init__.py  auth.py  config.py  main.py  models.py  observability.py  services.py
app/sdr/: __init__.py  airspy_backend.py  backend.py  bladerf_backend.py  hackrf_backend.py  mock_backend.py  registry.py  rtlsdr_backend.py  sidekiq_backend.py  sidekiq_worker.py  soapy_utils.py  soapy_worker.py  usb_utils.py
app/web/: index.html
notebooks/: sdr_server_smoketest.ipynb
scripts/: example_client.py  sdr-gateway-service.sh
tests/: test_api.py  test_auth.py  test_config.py  test_metrics_api.py  test_services_lifecycle.py  test_services_tx.py  test_tx_rx_hardware.py
